<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/acceptOrderView_rg_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <RadioButton
        android:layout_marginBottom="9dp"
        android:textSize="18sp"
        android:id="@+id/acceptOrderView_rb_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_accept" />

    <RadioButton
        android:layout_marginBottom="9dp"
        android:textSize="18sp"
        android:id="@+id/acceptOrderView_rb_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_pay" />

    <RadioButton
        android:layout_marginBottom="9dp"
        android:textSize="18sp"
        android:id="@+id/acceptOrderView_rb_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status_send" />

</RadioGroup>